# Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

load("//bazel_tools:haskell.bzl", "da_haskell_binary")

da_haskell_binary(
    name = "evidence-security",
    srcs = glob(["EvidenceSecurity.hs"]),
    hackage_deps = [
        "base",
        "containers",
        "extra",
        "filepath",
        "megaparsec",
        "split",
        "text",
    ],
    src_strip_prefix = "src",
    visibility = ["//visibility:public"],
)
